deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app
  namespace: ingress-apple
  labels:
    app: apple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  strategy: {}
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args:
          - "-text=apple"
---
kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: ingress-apple
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
--
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-app
  namespace: ingress-banana
  labels:
    app: banana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  strategy: {}
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args:
          - "-text=banana"
---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: ingress-banana
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-app
  namespace: ingress-coffee
  labels:
    app: coffee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee
  strategy: {}
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args:
          - "-text=coffee"
---
kind: Service
apiVersion: v1
metadata:
  name: coffee-service
  namespace: ingress-coffee
spec:
  selector:
    app: coffee
  ports:
    - port: 5678 # Default port for image
