ingress-apple.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-apple
  namespace: ingress-apple
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: apple
spec:
  rules:
  - http:
      paths:
        - path: /apple
          pathType: Prefix
          backend:
            service:
              name: apple-service
              port: 
                number: 5678
---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-banana
  namespace: ingress-banana
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: banana
spec:
  rules:
  - http:
      paths:
        - path: /banana
          pathType: Prefix
          backend:
            service:
              name: banana-service
              port: 
                number: 5678
---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-coffee
  namespace: ingress-coffee
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: coffee
spec:
  rules:
  - http:
      paths:
        - path: /coffee
          pathType: Prefix
          backend:
            service:
              name: banana-service
              port: 
                number: 5678
